--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
+    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mysql": "github:mysqljs/mysql"
+    "multer": "^1.4.1",
+    "mysql": "github:mysqljs/mysql",
+    "sharp": "^0.22.0",
+    "validator": "^10.11.0"
   }
 }
