--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js",
+    "dev": "env-cmd ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +15,12 @@
     "bcrypt": "^3.0.6",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "env-cmd": "^8.0.2",
     "express": "^4.16.4",
     "multer": "^1.4.1",
     "mysql": "github:mysqljs/mysql",
+    "nodemailer": "^4.7.0",
+    "nodemon": "^1.18.11",
     "sharp": "^0.22.0",
     "validator": "^10.11.0"
   }
