--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "body-parser": "^1.18.3",
     "env-cmd": "^8.0.2",
     "express": "^4.16.4",
+    "handlebars": "^4.1.2",
+    "html-pdf": "^2.2.0",
     "multer": "^1.4.1",
     "mysql": "github:mysqljs/mysql",
     "nodemailer": "^4.7.0",
