--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "dev":"env-cmd ./config/dev.env nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
